// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-inline-notice Attention message 1`] = `
<DocumentFragment>
  <div
    class="inline-notice inline-notice--attention"
  >
    <span
      class="inline-notice__header"
    >
      <svg
        aria-label="Attention"
        class="icon icon--attention-filled-small"
        focusable="false"
        height="16px"
        role="img"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention-filled-small"
        />
      </svg>
    </span>
    <span
      class="inline-notice__main"
    >
      <p>
        Update your credit card.
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-inline-notice Confirmation message 1`] = `
<DocumentFragment>
  <div
    class="inline-notice inline-notice--confirmation"
  >
    <span
      class="inline-notice__header"
    >
      <svg
        aria-label="Confirmation"
        class="icon icon--confirmation-filled-small"
        focusable="false"
        height="16px"
        role="img"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-confirmation-filled-small"
        />
      </svg>
    </span>
    <span
      class="inline-notice__main"
    >
      <p>
        Delivered on May 1, 2017
      </p>
      <p>
        Tracking number: 
        <a
          href="http://www.ebay.com"
        >
          93878473859376898908657567
        </a>
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-inline-notice Default 1`] = `
<DocumentFragment>
  <div
    class="inline-notice "
  >
    <span
      class="inline-notice__main"
    >
      <p>
        text message
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-inline-notice Information message 1`] = `
<DocumentFragment>
  <div
    class="inline-notice inline-notice--information"
  >
    <span
      class="inline-notice__header"
    >
      <svg
        aria-label="Information"
        class="icon icon--information-filled-small"
        focusable="false"
        height="16px"
        role="img"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-information-filled-small"
        />
      </svg>
    </span>
    <span
      class="inline-notice__main"
    >
      <p>
        Global Shipping Program transaction.
      </p>
    </span>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-inline-notice Notice toggle 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Hide Notice
  </button>
  <div
    class="inline-notice inline-notice--confirmation"
  >
    <span
      class="inline-notice__header"
    >
      <svg
        aria-label="Toggle notice"
        class="icon icon--confirmation-filled-small"
        focusable="false"
        height="16px"
        role="img"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-confirmation-filled-small"
        />
      </svg>
    </span>
    <span
      class="inline-notice__main"
    >
      <p>
        Delivered on May 1, 2017
      </p>
      <p>
        Tracking number: 
        <a
          href="http://www.ebay.com"
        >
          93878473859376898908657567
        </a>
      </p>
    </span>
  </div>
</DocumentFragment>
`;
